Drop the deprecated v1 API (#22)
