# openapi.yaml
@@ -72,8 +72,6 @@ tags:
     description: Event management
   - name: components
     description: Operations about components
-  - name: v1
-    description: Deprecated API schema for backward compatibility
 security:
   - BearerAuth: []
 paths:
@@ -502,48 +500,6 @@ paths:
           description: Invalid input.
         "404":
           description: Not found.
-  /v1/component_status:
-    get:
-      summary: Get all components.
-      tags:
-        - v1
-      responses:
-        "200":
-          description: Successful operation.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/ComponentV1"
-    post:
-      summary: Update component status.
-      tags:
-        - v1
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/ComponentPostV1"
-      responses:
-        "201":
-          description: Successful operation.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/IncidentV1"
-  /v1/incidents:
-    get:
-      summary: Get all incidents.
-      tags:
-        - v1
-      responses:
-        "200":
-          description: Successful operation.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/IncidentsV1"
 
 components:
   schemas:
@@ -888,105 +844,6 @@ components:
         timestamp:
           type: string
           format: date-time
-    IncidentsV1:
-      type: array
-      items:
-        $ref: "#/components/schemas/IncidentV1"
-    IncidentV1:
-      type: object
-      required:
-        - text
-        - impact
-        - start_date
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 200
-        text:
-          type: string
-          example: "OpenStack Upgrade in regions EU-DE/EU-NL"
-        impact:
-          type: integer
-          enum: [0, 1, 2, 3]
-          example: 1
-        start_date:
-          type: string
-          example: "2006-01-13 17:02"
-        end_date:
-          type: string
-          example: "2006-01-14 17:10"
-        updates:
-          type: array
-          items:
-            $ref: "#/components/schemas/IncidentStatusPostV1"
-    IncidentStatusPostV1:
-      type: object
-      properties:
-        status:
-          type: string
-          example: "resolved"
-        text:
-          type: string
-          example: "issue resolved"
-        timestamp:
-          type: string
-          example: "2006-01-14 17:10"
-    ComponentV1:
-      type: object
-      required:
-        - id
-        - name
-        - attributes
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 218
-        name:
-          type: string
-          example: "Object Storage Service"
-        attributes:
-          type: array
-          items:
-            $ref: "#/components/schemas/ComponentAttrV1"
-        incidents:
-          $ref: "#/components/schemas/IncidentsV1"
-    ComponentPostV1:
-      type: object
-      required:
-        - name
-        - impact
-      properties:
-        text:
-          type: string
-          example: Incident
-        name:
-          type: string
-          example: "cmp1"
-        impact:
-          type: integer
-          enum:
-            - 0
-            - 1
-            - 2
-            - 3
-          example: 1
-        attributes:
-          $ref: "#/components/schemas/ComponentAttrV1"
-    ComponentAttrV1:
-      type: object
-      properties:
-        name:
-          type: string
-          enum:
-            - category
-            - region
-            - type
-          example: "category"
-        value:
-          type: string
-          example: "Storage"
     InternalServerError:
       type: object
       properties:
